Test fix: sticky header displaying block on ios

--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -23,7 +23,7 @@
     text-align: center;
     padding: 0;
     margin: 0;
-    
+    top: 0;
 }
 
 #menu-bar li {
